# test_github

Qt_project/Hello_World/: CMakeLists.txt  main.cpp
Qt_project/hw_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_project/untitled/: mainwindow.ui
Qt_project/untitled1/: mainwindow.ui
Qt_project/untitled2/: main.cpp
Qt_project/untitled3/: mainwindow.ui
Qt_project/untitled4/: mainwindow.cpp  mainwindow.h  mainwindow.ui
hw3/: hw3.pro  idatabase.cpp  idatabase.h  loginview.cpp  loginview.ui  patienteditview.cpp  patienteditview.h  patienteditview.ui  patientview.cpp  patientview.ui  welcomeview.cpp  welcomeview.h  welcomeview.ui  widget.cpp  widget.h  widget.ui
